fluxcd/apps/base/piped/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: piped
  labels:
    routed-gateway: "true"
